style.css
body {
    background-color: black;
}

h1 {
    font-size: 60px;
    color: white;
    text-align: center;
}

button {
    border-radius: 40px;
    border: solid 4px;
    margin: 10px;
}
button:hover {
    background-color: #93E9BE;
    transform: scale(1.1);
}

p {
    font-size: 30px;
    color: white;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#main {
    min-height: 400px;
    width: 80%;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
    flex-direction: column;
}

.buttons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

/*.rock {
    background-color: #A7C7E7;
}

.paper {
    background-color: #F8C8DC;
}

.scissors {
    background-color: #FFFFD8;
}*/

.message {
    font-size: 30px;
    color: white;
}

#score {
    width: 80%;
    display: flex;
    justify-content: space-evenly;
}

.player-score {
    display: flex;
    margin: 10px;
}

.computer-score {
    display: flex;
    margin: 10px;
}

.player-token {
    width: 20px;
    height: 20px;
    background-color: #93E9BE;
    border-radius: 50%;
    align-self: center;
    margin-right: 10px;
    flex: none;
}

.computer-token {
    width: 20px;
    height: 20px;
    background-color: red;
    border-radius: 50%;
    align-self: center;
    margin-right: 10px;
    flex: none;
}

.player-clicked {
    background-color: #93E9BE;
}

.computer-clicked {
    border-color: red;
}

